--- a/Src/MassTransit3Demo.Web/Views/Home/_Home.cshtml
+++ b/Src/MassTransit3Demo.Web/Views/Home/_Home.cshtml
@@ -7,9 +7,9 @@
 <div class="row">
     <div class="col-md-6">
         <h2>Request/Response Queue</h2>
-        @using (Html.BeginForm("SendRequest", "Home", FormMethod.Post, new {@class = "form-inline"}))
+        @using (Html.BeginForm("SendRequest", "Home", FormMethod.Post, new { @class = "form-inline" }))
         {
-            @Html.TextBox("message", null, new {@class = "form-control"})
+            @Html.TextBox("message", null, new { @class = "form-control" })
             <button type="submit" class="btn btn-primary">Send Request</button>
         }
 
@@ -19,27 +19,40 @@
 
     <div class="col-md-6">
         <h2>Command Queue</h2>
-        @using (Html.BeginForm("SendCommand", "Home", FormMethod.Post, new {@class = "form-inline"}))
+        @using (Html.BeginForm("SendCommand", "Home", FormMethod.Post, new { @class = "form-inline" }))
         {
-            @Html.TextBox("message", null, new {@class = "form-control"})
+            @Html.TextBox("message", null, new { @class = "form-control" })
             <button type="submit" class="btn btn-primary">Send Command</button>
         }
     </div>
 </div>
-<div>
-    <h2>Saga</h2>
-    <p>Correlation Id: @Guid.NewGuid()</p>
-    @using (Html.BeginForm("SendReversal", "Home", FormMethod.Post, new { @class = "form-inline" }))
-    {
-        @Html.TextBox("transactionId", null, new { @class = "form-control" })
-        <button type="submit" class="btn btn-primary">Send Reversal</button>
-    }
+<div class="row">
+    <div class="col-md-6">
+        <h2>Saga</h2>
+        <p>Correlation Id: @Guid.NewGuid()</p>
+        @using (Html.BeginForm("SendReversal", "Home", FormMethod.Post, new { @class = "form-inline" }))
+        {
+            @Html.TextBox("transactionId", null, new { @class = "form-control" })
+            <button type="submit" class="btn btn-primary">Send Reversal</button>
+        }
 
-    @using (Html.BeginForm("SendReversalAck", "Home", FormMethod.Post, new { @class = "form-inline" }))
-    {
-        @Html.TextBox("transactionId", null, new { @class = "form-control" })
-        <button type="submit" class="btn btn-primary">Send Reversal Ack</button>
-    }
+        @using (Html.BeginForm("SendReversalAck", "Home", FormMethod.Post, new { @class = "form-inline" }))
+        {
+            @Html.TextBox("transactionId", null, new { @class = "form-control" })
+            <button type="submit" class="btn btn-primary">Send Reversal Ack</button>
+        }
+    </div><div class="col-md-6">
+        <h2>Message Versioning</h2>
+        @using (Html.BeginForm("SendV1", "Home", FormMethod.Post, new { @class = "form-inline" }))
+        {
+            <button type="submit" class="btn btn-primary">Send V1</button>
+        }
+
+        @using (Html.BeginForm("SendV2", "Home", FormMethod.Post, new { @class = "form-inline" }))
+        {
+            <button type="submit" class="btn btn-primary">Send V2</button>
+        }
+    </div>
 </div>
 
 <!-- /ko -->
